# cosi-232-final

./: Dockerfile  README.md  bibliography.py  config.py  docker-compose.yml  interface.py  llm_calls.py  open_alex_library.py  pipeline.py  pyproject.toml  report.md  setup.py  vector_base.py
app/: __init__.py  models.py  routes.py  tasks.py
eval/: eval_results.txt  generate_proxy_annotations.py  proxy_annotations_from_citations.json  proxy_rouge_bleu.py  similarity_metrics.py
instance/: eratosthenes.db
rag_logs/: 2025-05-07T21-12-02.130571Z__How_does_tokenization_work__d3d659e1.json  2025-05-07T21-26-33.882755Z__What_are_the_theoretical_foundations_of_compositio__6a047547.json  2025-05-07T21-28-15.360895Z__I_want_to_find_parallel_corpus_resources__90d859b7.json  2025-05-07T21-29-42.210524Z__Evaluation_without_humans__bf50c055.json  2025-05-07T21-34-21.658935Z__Can_we_model_how_languages_evolve_computationlly__47749a4f.json  2025-05-07T21-35-28.617589Z__What_is_a_giraffe__c0d13167.json  2025-05-07T21-44-29.908624Z__What_strategies_exist_for_low-resource_langauages__49f7343e.json  2025-05-07T23-51-05.791926Z__What_are_the_theoretical_foundations_of_compositio__8ed265e9.json  2025-05-08T01-39-45.765035Z__Is_there_a_relationship_between_gender_bias_and_LL__961cad35.json  2025-05-08T01-57-55.257654Z__Cross-lingual_embeddings__94adec91.json  2025-05-08T02-26-28.637654Z__tokens__a12dcad8.json  2025-05-08T02-39-08.976679Z__adjectives__fa3d2ddd.json  2025-05-08T02-45-22.727303Z__What_s_an_embedding__c06f80c6.json  (+2 more)
tests/: conftest.py  test_api.py  test_db.py  test_tasks.py
(+4 files in other folders)
